Fixed the image on the main page being off centre

--- a/css_files/style.css
+++ b/css_files/style.css
@@ -1,5 +1,7 @@
 * {
     background-color: rgb(255, 228, 196);
+    margin: 0;
+    padding: 0;
 }
 body {
     background-color: rgba(109, 110, 55, 0.3);
@@ -12,9 +14,8 @@ body {
 }
 
 img {
-    margin: 10px 40px 10px 45px;
-    width: 500px;
-    /* padding: 1px 1px; */
+    margin:  1rem auto;
+    width : 100%;
     border: black 1px solid;
     box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.75);
     border-radius: 3px;
